--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -251,7 +251,7 @@
             window.onscroll = function () {
                 // 在滚动的时候添加判断
                 var topH = document.documentElement.scrollTop||document.body.scrollTop;
-                if(topH > clientHeight/2) {
+                if(topH > clientHeight) {
                     obtn.style.display = "block";
                 }else {
                     obtn.style.display = "none";
