--- a/work_blog/static/blog.css
+++ b/work_blog/static/blog.css
@@ -167,3 +167,7 @@ div#content_right li {
     text-overflow: ellipsis;
     font-size: initial;
 }
+div.blog-content blockquote {
+    background-color: #abb51985 !important;
+    border-left: 5px solid #a59d3f;
+}
