--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock title %}</title>
+    <meta id="keywords" name="keywords" content="非马梦衢的博客网站">
+    <meta id="description" name="description" content="分享 Python 全栈开发、爬虫、数据分析等相关的技术文章，热点资源，全栈程序员的成长之路。">
     <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}">
