--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -76,6 +76,11 @@
                             <span class="fa fa-rss"></span>&nbsp;RSS
                         </a>
                     </li>
+                    <li>
+                        <a href="{% url 'erweima:qrcode_home' %}">
+                            <span class="fa fa-balance-scale"></span>&nbsp;Qrcode
+                        </a>
+                    </li>
                 </ul>
 
 
