--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load hosts %}
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -77,7 +78,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{% url 'erweima:qrcode_home' %}">
+                        <a href="{% host_url 'qrcode_home' host 'tools' %}">
                             <span class="fa fa-balance-scale"></span>&nbsp;Qrcode
                         </a>
                     </li>
