--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -22,6 +22,7 @@
     {% compress js %}
     <script src="{% static 'jquery-1.12.4.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'highcharts.js' %}"></script>
     {% endcompress %}
 </head>
 <body>
