--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -21,7 +21,7 @@
     <script src="{% static 'highcharts.js' %}"></script>
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+    <div class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a href="{% url 'home' %}" class="navbar-brand">非马梦衢的博客</a>
